--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ greenlet==0.4.14
 idna==2.7
 iso8601==0.1.12
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==2.6.0
 keystoneauth1==3.10.0
 keystonemiddleware==5.2.0
