--- a/requirements.txt
+++ b/requirements.txt
@@ -68,7 +68,7 @@ python-editor==1.0.3
 python-keystoneclient==3.17.0
 python-mimeparse==1.6.0
 pytz==2018.5
-PyYAML==3.13
+pyyaml>=4.2b1
 repoze.lru==0.7
 requests==2.19.1
 rfc3986==1.1.0
