--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ python-mimeparse==1.6.0
 pytz==2018.5
 pyyaml>=4.2b1
 repoze.lru==0.7
-requests==2.19.1
+requests>=2.20.0
 rfc3986==1.1.0
 Routes==2.4.1
 scrypt==0.8.6
